@@ -1,2 +1,4 @@
+- renamed score to pairs
+
 2.0:
 - initial public release
